release/frontend-ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: frontend-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingress 
  servers:
  - port:
      number: 80 
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend-vs
  namespace: default
spec:
  hosts:
  - "*"
  gateways:
  - istio-system/frontend-gateway
  http:
  - route:
    - destination:
        host: frontend
        port:
          number: 80
    timeout: 3s
